--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,11 @@
 html, body {
-  height: 100%;
+  min-height: 100%;
 }
 
 body {
   height: 100%;
-  /* background-color: #002171; */
-  /* background: linear-gradient(141deg, #9fb8ad 0%, #1fc8db 51%, #2cb5e8 75%); */
-  background: linear-gradient(#e66465, #000051);
+  /* background: linear-gradient(#e66465, #000051); */
+  background-color: gray;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
